--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetDoc">
-        <activity android:name=".WelcomeActivity"></activity>
+        <activity android:name=".DoctorHomeActivity"></activity>
+        <activity android:name=".WelcomeActivity" />
         <activity
             android:name=".UserHomeActivity"
             android:exported="false" />
