--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.6.1'
