--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.meetdoc">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetDoc">
+        <activity
+            android:name=".AiDiseasePredictorResultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AiDiseasePredictorActivity"
+            android:exported="false" />
         <activity
             android:name=".BookAppointment"
             android:exported="false" />
@@ -32,10 +38,8 @@
         <activity
             android:name=".SiginActivity"
             android:exported="false" />
-        <activity
-            android:name=".doctorSignupActivity"
-            android:exported="false" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
